fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-	height: 100vh;
+	height: 90vh;
 	width: 100vw;
 }
 
@@ -14,6 +14,11 @@ a {
 }
 
 /* ------------------ Header  ------------------ */
+
+.header__wrapper {
+	max-width: 1400px;
+	margin: auto;
+}
 
 .header {
 	min-height: 30vh;
@@ -140,8 +145,14 @@ a {
 
 /* ------------------ Content  ------------------ */
 
-.content {
+.content_wrapper {
 	background-color: #f5f5f5;
+}
+
+.content {
+	height: 35vh;
+	max-width: 1400px;
+	margin: auto;
 	padding: 5rem;
 	display: grid;
 	grid-template-columns: auto auto;
